--- a/index.html
+++ b/index.html
@@ -73,43 +73,47 @@
     <p>Access core tools, documentation, admin portal, and live demos.</p>
 
     <div class="grid">
-      <!-- Launch App -->
-      <div class="card" onclick="window.open('/app', '_blank')">
-        <div class="icon">🚀</div>
-        <h3>Launch Web App</h3>
-        <p>Full suite of simulations and calculators.</p>
-      </div>
-      <!-- Reactor Designer -->
-      <div class="card" onclick="window.open('/reactor-designer.html', '_blank')">
-        <div class="icon">🔧</div>
-        <h3>Reactor Core Designer</h3>
-        <p>Customize core geometry and enrichment.</p>
-      </div>
-      <!-- Criticality Calculator -->
-      <div class="card" onclick="window.open('/criticality-calc.html', '_blank')">
-        <div class="icon">⚛️</div>
-        <h3>k-effective Calculator</h3>
-        <p>Analyze core reactivity in real-time.</p>
-      </div>
-      <!-- Isotope Database -->
-      <div class="card" onclick="window.open('/database.html', '_blank')">
-        <div class="icon">🧬</div>
-        <h3>Isotope Explorer</h3>
-        <p>Search & visualize isotope data.</p>
-      </div>
-      <!-- Live Dashboard -->
-      <div class="card" onclick="window.open('/dashboard.html', '_blank')">
-        <div class="icon">📡</div>
-        <h3>Live Research Dashboard</h3>
-        <p>View real-time simulation metrics.</p>
-      </div>
-      <!-- Documentation -->
-      <div class="card" onclick="window.open('/docs', '_blank')">
-        <div class="icon">📚</div>
-        <h3>Documentation & API</h3>
-        <p>Comprehensive manuals and code references.</p>
-      </div>
-    </div>
+    <!-- Launch App -->
+<div class="card" onclick="window.open('https://nuclear-toolbox.streamlit.app/', '_blank')">
+  <div class="icon">🚀</div>
+  <h3>Launch Web App</h3>
+  <p>Full suite of simulations and calculators.</p>
+</div>
+
+<!-- Reactor Designer -->
+<div class="card" onclick="window.open('https://nuclear-toolbox.streamlit.app/?menu=⚛️%20Reactor%20Core%20Designer', '_blank')">
+  <div class="icon">🔧</div>
+  <h3>Reactor Core Designer</h3>
+  <p>Customize core geometry and enrichment.</p>
+</div>
+
+<!-- Criticality Calculator -->
+<div class="card" onclick="window.open('https://nuclear-toolbox.streamlit.app/?menu=⚛️%20Criticality%20Calculator', '_blank')">
+  <div class="icon">⚛️</div>
+  <h3>k-effective Calculator</h3>
+  <p>Analyze core reactivity in real-time.</p>
+</div>
+
+<!-- Isotope Explorer -->
+<div class="card" onclick="window.open('https://nuclear-toolbox.streamlit.app/?menu=🔬%20Isotope%20Explorer', '_blank')">
+  <div class="icon">🧬</div>
+  <h3>Isotope Explorer</h3>
+  <p>Search & visualize isotope data.</p>
+</div>
+
+<!-- Live Research Dashboard -->
+<div class="card" onclick="window.open('https://nuclear-toolbox.streamlit.app/?menu=📡%20Live%20Dashboard', '_blank')">
+  <div class="icon">📡</div>
+  <h3>Live Research Dashboard</h3>
+  <p>Real-time data and analytics.</p>
+</div>
+
+<!-- Documentation -->
+<div class="card" onclick="window.open('https://nuclear-toolbox-docs.vercel.app/', '_blank')">
+  <div class="icon">📚</div>
+  <h3>Documentation (wip)</h3>
+  <p>Manuals and API guides.</p>
+</div>
 
     <a class="btn" href="/admin">Admin Portal</a>
     <p style="margin-top:30px; font-size:0.9em; color:#aaa;">&copy; 2025 The Nuclear Toolbox — <a class="btn" href="/terms.html" style="background:transparent; padding:0; font-size:0.9em;">Terms of Use</a></p>
