--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 <div class="card-container">
   <!-- Launch App -->
-  <div class="card" onclick="window.open('https://nuclear-toolbox.streamlit.app/', '_blank')">
+  <div class="card" onclick="window.open('https://nucleartoolbox.streamlit.app', '_blank')">
     <div class="icon">🚀</div>
     <h3>Launch Web App</h3>
     <p>Full suite of simulations and calculators.</p>
