--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
     </ul>
 
     <h2>📣 Join Our Beta Program</h2>
-    <p>We’re looking for early testers and collaborators. Interested? <a href="mailto:nucleartoolbox@proton.me">Email us</a> or fill the form below:</p>
+    <p>We’re looking for early testers and collaborators. Interested? <a href="mailto:nucleartoolbox@gmail.com">Email us</a> or fill the form below:</p>
     <form action="https://formspree.io/f/mpwrykzn" method="POST">
        <label>
       Your email:
