Mini button update

--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
 
     <hr />
 
-    <button onclick="window.location.href='index.html'">Go to launch page</button>
+        <a href="index.html" class="mini-button">Go to Index</a>
   </div>
 </body>
 </html>
