--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 </div>
 
 
-<button onclick="window.location.href='about.html'">Go to About Page</button>
+<a href="about.html" class="mini-button">Go to About Page</a>
 
 
 </body>
