--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta charset="UTF-8" />
   <title>Nuclear Toolbox Launchpad</title>
   <style>
+    
     body {
       font-family: 'Segoe UI', sans-serif;
       background: #0f1117;
@@ -74,6 +75,9 @@
 
 
 <body>
+    <div id="update-bar">
+  🚧 New update "The Isotopes Update Alpha v1.1.3 is out!"
+</div>
   <div class="container">
     <h1 class="bounce">⚙️ Nuclear Toolbox Launchpad</h1>
     <p>Access core tools, documentation, admin portal, and live demos.</p>
