--- a/index.html
+++ b/index.html
@@ -70,6 +70,16 @@
     .btn:hover {
       background: #005fa3;
     }
+
+    #update-bar {
+  background: #ff4757;
+  color: white;
+  text-align: center;
+  padding: 10px;
+  font-weight: bold;
+  font-family: 'Segoe UI', sans-serif;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+}
   </style>
 </head>
 
