--- a/index.html
+++ b/index.html
@@ -80,6 +80,24 @@
   font-family: 'Segoe UI', sans-serif;
   box-shadow: 0 2px 5px rgba(0,0,0,0.2);
 }
+
+.mini-button {
+  display: inline-block;
+  padding: 8px 16px;
+  margin-top: 1rem;
+  background-color: #ff4c4c; /* red highlight */
+  color: #fff;
+  font-weight: bold;
+  border-radius: 8px;
+  text-decoration: none;
+  box-shadow: 0 0 10px rgba(255, 76, 76, 0.5);
+  transition: background-color 0.3s ease;
+}
+
+.mini-button:hover {
+  background-color: #ff0000;
+}
+
   </style>
 </head>
 
