--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   
     <meta charset="UTF-8" />
   <title>Nuclear Toolbox Launchpad</title>
+  <link rel="icon" type="image/png" href="logo-small.png" />
   <style>
     
     body {
