--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-    <h1>🔬 About The Nuclear Toolbox</h1>
+    <h1>About The Nuclear Toolbox</h1>
     <p>The Nuclear Toolbox is a platform built for nuclear researchers, students, and educators. We aim to make advanced nuclear engineering tools easily accessible and visually interactive.</p>
 
     <hr />
