--- a/index.html
+++ b/index.html
@@ -99,6 +99,19 @@
   background-color: #ff0000;
 }
 
+.info-box {
+  background: #1e222d;
+  padding: 30px;
+  border-radius: 15px;
+  margin-top: 40px;
+  text-align: left;
+  line-height: 1.7;
+  box-shadow: 0 0 15px rgba(0,0,0,0.3);
+}
+.info-box h2 {
+  color: #ffcc00;
+}
+
   </style>
 </head>
 
@@ -108,8 +121,27 @@
   🚧 New update "The Isotopes Update Alpha v1.1.3 is out!"
 </div>
   <div class="container">
-    <h1 class="bounce">⚙️ Nuclear Toolbox Launchpad</h1>
+    <h1 class="bounce">Nuclear Toolbox Menu</h1>
     <p>Access core tools, documentation, admin portal, and live demos.</p>
+
+
+  <div class="info-box">
+    <h2>🎯 Mission Statement</h2>
+    <p>The Nuclear Toolbox is a passion-driven project built to support education, research, and innovation in nuclear science. Our goal is to bridge accessibility and functionality for researchers, students, and professionals.</p>
+
+    <h2>❓ FAQ</h2>
+    <p><strong>What is this?</strong><br>
+    A suite of nuclear engineering tools—decay simulators, isotope data, criticality calculators, and more.</p>
+
+    <p><strong>Who is this for?</strong><br>
+    Researchers, university students, and nuclear professionals. Especially useful for those pursuing nuclear science academically or professionally.</p>
+
+    <p><strong>Why was it built?</strong><br>
+    As part of my application to the Technical University of Denmark (DTU), this project shows my deep interest in nuclear engineering.</p>
+
+    <p><strong>Is it free to use?</strong><br>
+    Yes. The web tools are open access, with plans for future research collaborations.</p>
+</div>
 
 
 
