--- a/index.html
+++ b/index.html
@@ -213,6 +213,13 @@
   font-size: 0.9em;
 }
 
+.learning-grid .card:hover {
+  box-shadow: 0 0 15px rgba(0, 255, 255, 0.6), 0 0 30px rgba(0, 255, 255, 0.3);
+  transform: translateY(-5px) scale(1.02);
+  transition: box-shadow 0.3s ease, transform 0.3s ease;
+  border: 1px solid rgba(0, 255, 255, 0.4);
+}
+
   </style>
 </head>
 
