--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
 
 <div class="tool-wrapper">
   <div class="mini-tool">
-    <h3>🧪 Half-Life Calculator</h3>
+    <h3>🧪 Half-Life Calculator PREVIEW</h3>
     <label>Initial dose (in Sv):<br>
       <input type="number" id="initialAmount" class="gray-input">
     </label><br>
