--- a/index.html
+++ b/index.html
@@ -268,12 +268,13 @@
   text-align: center;
   transition: transform 0.3s, box-shadow 0.3s;
   cursor: pointer;
-  width: 260px;
+  width: 320px; 
+  box-shadow: 0 0 20px #ff335566; 
 }
 
 .launch-wrapper .card:hover {
   transform: translateY(-5px);
-  box-shadow: 0 0 15px #ff0066;
+  box-shadow: 0 0 30px #ff3355aa;
 }
 
 
@@ -311,6 +312,7 @@
 <div class="tool-wrapper">
   <div class="mini-tool">
     <h3>🧪 Half-Life Calculator</h3>
+    <p style="font-size: 0.85em; color: #999; margin-top: -8px;">(Preview only – limited calculator)</p>
     <label>Initial dose (in Sv):<br>
       <input type="number" id="initialAmount" class="gray-input">
     </label><br>
