--- a/index.html
+++ b/index.html
@@ -72,16 +72,7 @@
       background: #005fa3;
     }
 
-    #update-bar {
-  background: #ff4757;
-  color: white;
-  text-align: center;
-  padding: 10px;
-  font-weight: bold;
-  font-family: 'Segoe UI', sans-serif;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.2);
-}
-
+  
 .mini-button {
   display: inline-block;
   padding: 8px 16px;
@@ -184,6 +175,25 @@
     transform: translateY(0);
   }
 }
+.update-banner {
+  background-color: #f3425f;
+  overflow: hidden;
+  white-space: nowrap;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+
+.update-banner {
+  background-color: #f3425f;
+  overflow: hidden;
+  white-space: nowrap;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  position: relative;
+}
 
 .learning-grid .card {
   background: #2a2f3b;
@@ -283,8 +293,10 @@
 
 
 <body>
-    <div id="update-bar">
-  🚧 New update "The Isotopes Update Alpha v1.1.3 is out!"
+  <div class="update-banner">
+  <div class="scroll-text">
+    🎉 New update "The Isotopes Update Alpha v1.1.3 is out!"
+  </div>
 </div>
   <div class="container">
     <h1 class="bounce">Nuclear Toolbox Menu</h1>
