--- a/index.html
+++ b/index.html
@@ -185,14 +185,22 @@
   position: relative;
 }
 
-.update-banner {
-  background-color: #f3425f;
-  overflow: hidden;
+.scroll-text {
+  position: absolute;
   white-space: nowrap;
-  height: 50px;
-  display: flex;
-  align-items: center;
-  position: relative;
+  display: inline-block;
+  animation: scrollLeft 15s linear infinite;
+  font-weight: bold;
+  color: white;
+}
+
+@keyframes scrollLeft {
+  0% {
+    left: 100%;
+  }
+  100% {
+    left: -100%;
+  }
 }
 
 .learning-grid .card {
