--- a/index.html
+++ b/index.html
@@ -238,79 +238,7 @@
   border: 1px solid rgba(0, 255, 255, 0.4);
 }
 
-.tool-wrapper {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 40px;
-  justify-content: center;
-  align-items: flex-start;
-  margin-top: 40px;
-}
 
-.mini-tool {
-  background: #1a1e29;
-  color: white;
-  padding: 20px;
-  border-radius: 12px;
-  box-shadow: 0 0 20px #00b7ff55;
-  width: 260px;
-}
-
-.mini-tool input.gray-input {
-  background-color: #2b2e39;
-  border: none;
-  padding: 6px;
-  color: white;
-  border-radius: 6px;
-  width: 100%;
-  margin-bottom: 10px;
-}
-
-.mini-tool button {
-  background: #0077cc;
-  border: none;
-  color: white;
-  padding: 6px 12px;
-  border-radius: 6px;
-  cursor: pointer;
-}
-
-.mini-tool button:hover {
-  background: #005fa3;
-}
-
-.launch-wrapper .card {
-  background: #1a1e29;
-  padding: 20px;
-  border-radius: 12px;
-  text-align: center;
-  transition: transform 0.3s, box-shadow 0.3s;
-  cursor: pointer;
-  width: 320px; 
-  box-shadow: 0 0 20px #ff335566; 
-}
-
-.launch-wrapper .card:hover {
-  transform: translateY(-5px);
-  box-shadow: 0 0 30px #ff3355aa;
-}
-
-.mini-button {
-  display: inline-block;
-  padding: 8px 16px;
-  margin-top: 1rem;
-  background-color: #ff4c4c; /* red highlight */
-  color: #fff;
-  font-weight: bold;
-  border-radius: 8px;
-  text-decoration: none;
-  box-shadow: 0 0 10px rgba(255, 76, 76, 0.5);
-  transition: background-color 0.3s ease;
-}
-
-.mini-button:hover {
-  background-color: #ff0000;
-}
   </style>
 </head>
 
@@ -344,32 +272,13 @@
     Yes. The web tools are open access, with plans for future research collaborations.</p>
 </div>
 
-<div class="tool-wrapper">
-  <div class="mini-tool">
-    <h3>🧪 Half-Life Calculator</h3>
-    <p style="font-size: 0.85em; color: #999; margin-top: -8px;">(Preview only – limited calculator)</p>
-    <label>Initial dose (in Sv):<br>
-      <input type="number" id="initialAmount" class="gray-input">
-    </label><br>
-    <label>Half-life (in years):<br>
-      <input type="number" id="halfLife" class="gray-input">
-    </label><br>
-    <label>Time elapsed (in years):<br>
-      <input type="number" id="timeElapsed" class="gray-input">
-    </label><br>
-    <button onclick="calculateHalfLife()">Calculate</button>
-    <p id="result">☢️ Remaining dose: -- Sv</p>
-  </div>
+    <div class="card-container">
+  <!-- Launch App -->
+  <div class="card" onclick="window.open('https://nucleartoolbox.streamlit.app', '_blank')">
+    <div class="icon">🚀</div>
+    <h3>Launch Web App</h3>
+    <p>Full suite of simulations and calculators.</p>
 
-  <div class="launch-wrapper">
-    <!-- Existing launch card -->
-    <div class="card" onclick="window.open('https://nucleartoolbox.streamlit.app', '_blank')">
-      <div class="icon">🚀</div>
-      <h3>Launch Web App</h3>
-      <p>Full suite of simulations and calculators.</p>
-    </div>
-  </div>
-</div>
 
 <section class="learning-corner">
   <h2>🎓 Learning Corner</h2>
