--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
     <div class="icon">🚀</div>
     <h3>Launch Web App</h3>
     <p>Full suite of simulations and calculators.</p>
-
+</div>
 
 <section class="learning-corner">
   <h2>🎓 Learning Corner</h2>
